--- a/CssFile/table.css
+++ b/CssFile/table.css
@@ -86,6 +86,7 @@ body {
     font-weight: bold;
     color: #24315E;
 }
+
 #left #admin {
     font-size: 25px;
     padding: 0px 45px;
@@ -93,7 +94,11 @@ body {
     border: none;
 }
 
-
+#left #admin span {
+    font-weight: bold;
+    font-size: 25px;
+    font-family: impact;
+}
 
 #left a {
     text-decoration: none;
@@ -109,7 +114,7 @@ body {
 #left a:hover{
     background-color: aliceblue;
 }
-#left #insert{
+#left #table{
     background-color: aliceblue;
     color: #24315E;
 }
@@ -270,11 +275,9 @@ body {
     align-items: center;
     justify-content: start;
 }
-table th{
-    padding: 10px;
-}
 table th,td{
     border: 1px solid;
+    padding: 12px 10px;
     text-align: justify;
     font-weight: bold;
 }
@@ -285,27 +288,25 @@ table th{
 }
 
 table td{
-    background-color: aliceblue;
+    background-color: #24315E;
     border: 1px solid #24315E;
     font-size: 12px;
     font-weight: bold;
     color: white;
 }
-table td input{
-    width: 100%;
-    padding: 10px 10px;
+table td:hover{
     background-color: white;
-    font-weight: bold;
-    border: 1px solid aliceblue;
+    color: #24315E;
+    cursor: pointer;
+    border: 1px solid white;
 }
-
 #bottom{
     height: 10vh;
     width: 90%;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
 }
 #bottom button{
     padding: 12px 25px;
