--- a/CssFile/dash.css
+++ b/CssFile/dash.css
@@ -21,11 +21,14 @@ body {
         background-color: black;
         color: white;
     }
-    #left a,i{
+    #left a{
+        color: white;
+    }
+    #left p{
         color: white;
     }
     #left a:hover{
-        color: red;
+        color: #24315E;
     }
     #left #Payment{
         color: white;
@@ -50,8 +53,7 @@ body {
         background-color: white;
     }
     #hero #navbar #third button{
-        background-color: green;
-        border-color: green;
+        border: 1px solid white;
     }
     #hero #navbar #Time{
         background-color: white;
@@ -218,8 +220,6 @@ body {
     text-transform: uppercase;
     letter-spacing: 2px;
     padding: 8px 10px;
-    background-color: white;
-    border-radius: 20px;
 }
 
 #hero #navbar #second i {
@@ -263,10 +263,38 @@ body {
 }
 
 #hero #main-content {
-    height: 90vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+    margin: auto;
+    height: 85vh;
+    width: 90%;
+    display: grid;
+    grid-template-columns: auto auto auto;
     align-items: center;
     justify-content: space-evenly;
 }
+#hero #main-content #box{
+    height: 35vh;
+    width: 350px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
+    color: #24315E;
+    text-align: justify;
+    padding: 10px;
+}
+#hero #main-content #box div{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+#hero #main-content #box img{
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
