--- a/CssFile/insert.css
+++ b/CssFile/insert.css
@@ -21,13 +21,19 @@ body {
         background-color: black;
         color: white;
     }
-    #left a,i{
+    #left a{
         color: white;
     }
     #left a:hover{
-        color: red;
+        color: #24315E;
+    }
+    #left i:hover{
+        color: #24315E;
     }
     #left #Payment{
+        color: white;
+    }
+    #left p{
         color: white;
     }
     #hero{
@@ -50,8 +56,7 @@ body {
         background-color: white;
     }
     #hero #navbar #third button{
-        background-color: green;
-        border-color: green;
+        border: 1px solid white;
     }
     #hero #navbar #Time{
         background-color: white;
@@ -218,8 +223,6 @@ body {
     text-transform: uppercase;
     letter-spacing: 2px;
     padding: 8px 10px;
-    background-color: white;
-    border-radius: 20px;
 }
 
 #hero #navbar #second i {
@@ -263,12 +266,19 @@ body {
 }
 
 #hero #main-content {
-    height: 90vh;
-    width: 100%;
+    margin: 0 auto;
+    height: 85vh;
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    overflow-y: scroll;
+    border: 2px solid aliceblue;
+}
+table #head{
+    position: sticky;
+    top: 0px;
 }
 table th{
     padding: 10px;
@@ -303,7 +313,7 @@ table td #num::placeholder{
 
 table td input{
     width: 100%;
-    padding: 10px 10px;
+    padding: 9px 10px;
     background-color: white;
     font-weight: bold;
     border: 1px solid aliceblue;
