--- a/card.css
+++ b/card.css
@@ -16,49 +16,72 @@ html {
 body {
     background-color: white;
 }
-.mode{
-    #left{
+
+.mode {
+    #left {
+        background-color: #0080004f;
+        color: white;
+    }
+
+    #left a {
+        color: white;
+    }
+
+    #left p {
+        color: white;
+    }
+
+    #left a:hover {
+        color: #24315E;
+    }
+
+    #left #Payment {
+        color: white;
+    }
+
+    #hero {
         background-color: black;
         color: white;
     }
-    #left a,i{
+
+    #hero p {
         color: white;
     }
-    #left a:hover{
-        color: red;
-    }
-    #left #Payment{
+
+    #hero #navbar #first #welc {
         color: white;
     }
-    #hero{
-        background-color: black;
-        color: white;
-    }
-    
-    #hero p{
-        color: white;
-    }
-    #hero #navbar #first #welc{
-        color: white;
-    }
-    #hero #navbar #second i{
+
+    #hero #navbar #second i {
         color: #24315E;
         background-color: white;
     }
-    #hero #navbar #second #mode i{
+
+    #hero #navbar #second #mode i {
         color: #24315E;
         background-color: white;
     }
-    #hero #navbar #third button{
-        background-color: green;
-        border-color: green;
+
+    #hero #navbar #third button {
+        border: 1px solid white;
     }
-    #hero #navbar #Time{
+
+    #hero #navbar #Time {
         background-color: white;
         color: #24315E;
     }
-    #hero #navbar #Time p{
+
+    #hero #navbar #Time p {
         color: black;
+    }
+    #div2 #box1{
+        background-color: #0080004f;
+    }
+    #div2 #box1 h2{
+        color: #24315E;
+    }
+    #box2 p{
+        color: #24315E;
     }
 }
 
@@ -81,11 +104,13 @@ body {
     /* gap: 25px; */
     /* border: 2px solid; */
 }
-#left p{
+
+#left p {
     padding: 40px 25px;
     font-weight: bold;
     color: #24315E;
 }
+
 #left #admin {
     font-size: 25px;
     padding: 0px 45px;
@@ -110,13 +135,16 @@ body {
     width: 100%;
     padding: 15px 20px;
 }
-#left a:hover{
+
+#left a:hover {
     background-color: aliceblue;
 }
-#left #card{
+
+#left #card {
     background-color: aliceblue;
     color: #24315E;
 }
+
 #left a i {
     padding: 0px 5px;
     text-align: left;
@@ -155,7 +183,6 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    box-shadow: 0px 0px 5px #24315E;
 }
 
 #left #premium #box #btn {
@@ -222,8 +249,6 @@ body {
     text-transform: uppercase;
     letter-spacing: 2px;
     padding: 8px 10px;
-    background-color: white;
-    border-radius: 20px;
 }
 
 #hero #navbar #second i {
@@ -233,7 +258,8 @@ body {
     background-color: white;
     color: #24315E;
 }
-#hero #navbar #second #mode i{
+
+#hero #navbar #second #mode i {
     padding: 8px 8px;
     color: #24315E;
 }
@@ -253,7 +279,8 @@ body {
     box-shadow: 0px 0px 1px #4444449e;
     outline: none;
 }
-#hero #navbar #third button{
+
+#hero #navbar #third button {
     padding: 9px 20px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -262,12 +289,13 @@ body {
     background-color: #24315E;
     box-shadow: 0px 0px 1px;
 }
-#hero #navbar #third button i{
+
+#hero #navbar #third button i {
     color: white;
 }
 
 #hero #main-content {
-    height: 88vh;
+    height: 87vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -403,14 +431,21 @@ i {
     justify-content: center;
     color: #24315E;
 }
-#hero #main-content #main-box1 #box2 #date{
+
+#hero #main-content #main-box1 #box2 #date {
     margin-top: 10px;
     padding: 0px 20px;
 }
-#hero #main-content #main-box1 #box2 h2{
+
+#hero #main-content #main-box1 #box2 h2 {
     padding: 10px 20px;
 }
-#hero #main-content #main-box1 #box2 #insta,#whats,#face,#yout,#google{
+
+#hero #main-content #main-box1 #box2 #insta,
+#whats,
+#face,
+#yout,
+#google {
     width: 100%;
     padding: 5px 20px;
     display: flex;
@@ -419,7 +454,7 @@ i {
     font-size: 18px;
 }
 
-#hero #main-content #main-box1 #box2 i{
+#hero #main-content #main-box1 #box2 i {
     border: 1px solid;
     padding: 7px 8px;
     border-radius: 20px;
@@ -428,11 +463,13 @@ i {
     background-color: #24315E;
     color: aliceblue;
 }
-#hero #main-content #main-box1 #box2 meter{
+
+#hero #main-content #main-box1 #box2 meter {
     height: 1.6vh;
     width: 60%;
 }
-#hero #main-content #main-box1 #box2 p{
+
+#hero #main-content #main-box1 #box2 p {
     font-weight: bold;
     font-size: 14px;
 }
@@ -459,7 +496,8 @@ i {
     border-radius: 15px;
     color: #24315E;
 }
-#hero #main-content #main-box2 #box i{
+
+#hero #main-content #main-box2 #box i {
     font-size: 18px;
     border: none;
     padding: 10px 11px;
@@ -467,11 +505,15 @@ i {
     color: #24315E;
     background-color: aliceblue;
 }
-#hero #main-content #main-box2 #box i:hover{
+
+#hero #main-content #main-box2 #box i:hover {
     background-color: #0080004f;
     color: #24315E;
 }
-#hero #main-content #main-box2 #box #shoping,#movies,#steps{
+
+#hero #main-content #main-box2 #box #shoping,
+#movies,
+#steps {
     width: 100%;
     display: grid;
     grid-template-columns: auto auto auto;
@@ -479,22 +521,34 @@ i {
     gap: 40px;
     justify-content: space-between;
 }
-#hero #main-content #main-box2 #box p{
+
+#hero #main-content #main-box2 #box p {
     font-weight: bold;
     font-size: 12px;
     color: #4444449e;
 }
-#hero #main-content #main-box2 #box #prize{
+
+#hero #main-content #main-box2 #box #prize {
     padding: 2px 10px;
     border: 1px solid white;
     color: red;
     border-radius: 20px;
     background-color: #ff000039;
 }
-#hero #main-content #main-box2 #box #transfer{
+
+#hero #main-content #main-box2 #box #transfer {
     padding: 2px 10px;
     border: 1px solid white;
     color: green;
     border-radius: 20px;
     background-color: #0080004f;
+}
+
+#hero #main-content #main-box2 #box img {
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    object-fit: cover;
 }
