--- a/CssFile/dash.css
+++ b/CssFile/dash.css
@@ -62,6 +62,9 @@ body {
     #hero #navbar #Time p{
         color: black;
     }
+    #main-content h5,h4,h3{
+        color: white;
+    }
 }
 
 #main {
@@ -267,13 +270,13 @@ body {
     height: 85vh;
     width: 90%;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto;
     align-items: center;
     justify-content: space-evenly;
 }
 #hero #main-content #box{
     height: 35vh;
-    width: 350px;
+    width: 50vh;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -290,11 +293,23 @@ body {
     justify-content: space-between;
 }
 #hero #main-content #box img{
-    height: 100%;
-    width: 100%;
+    height: 15vh;
+    width: 47vh;
     background-size: cover;
     object-fit: cover;
     background-repeat: no-repeat;
     background-position: center;
+}
+#hero #main-content #box button{
+    padding: 8px 20px;
+    font-weight: bold;
+    color: white;
+    background-color: #24315E;
+    border: 1px solid #24315E;
+}
+#hero #main-content #box button:hover{
+    background-color: white;
+    color: #24315E;
+    cursor: pointer;
 }
 
