--- a/CssFile/insert.css
+++ b/CssFile/insert.css
@@ -274,7 +274,7 @@ body {
     align-items: center;
     justify-content: start;
     overflow-y: scroll;
-    border: 2px solid aliceblue;
+    border: 2px solid #24315E;
 }
 table #head{
     position: sticky;
@@ -335,6 +335,13 @@ table td input{
     color: white;
     font-weight: bold;
     border: 1px solid #24315E;
+}
+#bottom button a{
+    text-decoration: none;
+    color: white;
+}
+#bottom button a:hover{
+    color: #24315E;
 }
 #bottom button:hover{
     background-color: white;
