--- a/CssFile/team.css
+++ b/CssFile/team.css
@@ -265,8 +265,22 @@ body {
 #hero #main-content {
     height: 90vh;
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto auto;
     align-items: center;
     justify-content: space-evenly;
+}
+
+#hero #main-content #box{
+    height: 40vh;
+    width: 65vh;
+    background-color: transparent;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px #24315E;
 }
