--- a/CssFile/team.css
+++ b/CssFile/team.css
@@ -62,6 +62,11 @@ body {
     #hero #navbar #Time p{
         color: black;
     }
+    #hero #main-content #box{
+        background-color: black;
+        color: white;
+        box-shadow: 0px 0px 5px;
+    }
 }
 
 #main {
@@ -80,18 +85,19 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: center;
+    background-color: #24315E;
     /* gap: 25px; */
     /* border: 2px solid; */
 }
 #left p{
     padding: 40px 25px;
     font-weight: bold;
-    color: #24315E;
+    color: white;
 }
 #left #admin {
     font-size: 25px;
     padding: 0px 45px;
-    color: #24315E;
+    color: white;
     border: none;
 }
 
@@ -103,7 +109,7 @@ body {
     font-size: 14px;
     padding: 0px 0px 0px 40px;
     text-align: left;
-    color: #4444449e;
+    color: white;
     /* border: 1px solid; */
     width: 100%;
     padding: 15px 20px;
@@ -274,12 +280,12 @@ body {
 #hero #main-content #box{
     height: 40vh;
     width: 65vh;
-    background-color: transparent;
-    color: white;
+    background-color: aliceblue;
+    color: #24315E;
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: start;
+    align-items: center;
+    justify-content: center;
     padding: 10px;
     border-radius: 15px;
     box-shadow: 0px 0px 5px #24315E;
