--- a/CssFile/dash.css
+++ b/CssFile/dash.css
@@ -83,18 +83,19 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: center;
+    background-color: #24315E;
     /* gap: 25px; */
     /* border: 2px solid; */
 }
 #left p{
     padding: 40px 25px;
     font-weight: bold;
-    color: #24315E;
+    color: white;
 }
 #left #admin {
     font-size: 25px;
     padding: 0px 45px;
-    color: #24315E;
+    color: white;
     border: none;
 }
 
@@ -106,7 +107,7 @@ body {
     font-size: 14px;
     padding: 0px 0px 0px 40px;
     text-align: left;
-    color: #4444449e;
+    color: white;
     /* border: 1px solid; */
     width: 100%;
     padding: 15px 20px;
@@ -299,7 +300,7 @@ body {
     object-fit: cover;
     background-repeat: no-repeat;
     background-position: center;
-    box-shadow: 0px 0px 1px;
+    box-shadow: 0px 0px 1px aliceblue;
     border-radius: 8px;
 }
 #hero #main-content #box #refresh{
