--- a/CssFile/insert.css
+++ b/CssFile/insert.css
@@ -83,18 +83,19 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: center;
+    background-color: #24315E;
     /* gap: 25px; */
     /* border: 2px solid; */
 }
 #left p{
     padding: 40px 25px;
     font-weight: bold;
-    color: #24315E;
+    color: white;
 }
 #left #admin {
     font-size: 25px;
     padding: 0px 45px;
-    color: #24315E;
+    color: white;
     border: none;
 }
 
@@ -106,7 +107,7 @@ body {
     font-size: 14px;
     padding: 0px 0px 0px 40px;
     text-align: left;
-    color: #4444449e;
+    color: white;
     /* border: 1px solid; */
     width: 100%;
     padding: 15px 20px;
@@ -274,7 +275,7 @@ body {
     align-items: center;
     justify-content: start;
     overflow-y: scroll;
-    border: 2px solid #24315E;
+    border: 2px solid aliceblue;
 }
 table #head{
     position: sticky;
@@ -318,6 +319,7 @@ table td input{
     font-weight: bold;
     border: 1px solid #0080004f;
     outline: none;
+    color: white;
 }
 
 #bottom{
