--- a/CssFile/table.css
+++ b/CssFile/table.css
@@ -80,27 +80,23 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: center;
+    background-color: #24315E;
     /* gap: 25px; */
     /* border: 2px solid; */
 }
 #left p{
     padding: 40px 25px;
     font-weight: bold;
-    color: #24315E;
+    color: white;
 }
-
 #left #admin {
     font-size: 25px;
     padding: 0px 45px;
-    color: #24315E;
+    color: white;
     border: none;
 }
 
-#left #admin span {
-    font-weight: bold;
-    font-size: 25px;
-    font-family: impact;
-}
+
 
 #left a {
     text-decoration: none;
@@ -108,7 +104,7 @@ body {
     font-size: 14px;
     padding: 0px 0px 0px 40px;
     text-align: left;
-    color: #4444449e;
+    color: white;
     /* border: 1px solid; */
     width: 100%;
     padding: 15px 20px;
