--- a/CssFile/insert.css
+++ b/CssFile/insert.css
@@ -296,7 +296,7 @@ body {
 }
 #hero #main-content form input{
     padding: 10px;
-    width: 220px;
+    width: 28vh;
     background-color: aliceblue;
     border: 1px solid #24315E;
     font-weight: bold;
