--- a/CssFile/team.css
+++ b/CssFile/team.css
@@ -285,8 +285,50 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    border: 2px solid;
+}
+#hero #main-content #box #table{
+    width: 100%;
+    height: 85%;
+    overflow-y: scroll;
+    padding: 0px 5px;
+}
+#hero #main-content #box #table table{
+    width: 100%;
+}
+#hero #main-content #head{
+    position: sticky;
+    top: 0px;
+    background-color: #24315E;
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    border: 1px solid #24315E;
+}
+#hero #main-content table td{
+    border: 1px solid;
+    padding: 5px;
+}
+
+#hero #main-content #box #button{
+    width: 100%;
+    height: 15%;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    padding: 10px;
-    border-radius: 15px;
-    box-shadow: 0px 0px 5px #24315E;
+    gap: 20px;
+    padding: 5px;
+}
+#hero #main-content #box button{
+    padding: 10px 20px;
+    background-color: #24315E;
+    border: 1px solid #24315E;
+    color: white;
+    font-weight: bold;
+}
+#hero #main-content #box button:hover{
+    background-color: white;
+    color: #24315E;
+    cursor: pointer;
 }
