--- a/CssFile/table.css
+++ b/CssFile/table.css
@@ -16,50 +16,62 @@ html {
 body {
     background-color: white;
 }
-.mode{
-    #left{
+
+.mode {
+    #left {
         background-color: black;
         color: white;
     }
-    #left a{
+
+    #left a {
         color: white;
     }
-    #left p{
+
+    #left p {
         color: white;
     }
-    #left a:hover{
+
+    #left a:hover {
         color: #24315E;
     }
-    #left #Payment{
+
+    #left #Payment {
         color: white;
     }
-    #hero{
+
+    #hero {
         background-color: black;
         color: white;
     }
-    
-    #hero p{
+
+    #hero p {
         color: white;
     }
-    #hero #navbar #first #welc{
+
+    #hero #navbar #first #welc {
         color: white;
     }
-    #hero #navbar #second i{
+
+    #hero #navbar #second i {
         color: #24315E;
         background-color: white;
     }
-    #hero #navbar #second #mode i{
+
+    #hero #navbar #second #mode i {
         color: #24315E;
         background-color: white;
     }
-    #hero #navbar #third button{
+
+    #hero #navbar #third button {
         border: 1px solid white;
     }
-    #hero #navbar #Time{
+
+    #hero #navbar #Time {
         background-color: white;
         color: #24315E;
     }
-    #hero #navbar #Time p{
+
+    #hero #navbar #Time p {
         color: black;
     }
 }
@@ -84,11 +96,13 @@ body {
     /* gap: 25px; */
     /* border: 2px solid; */
 }
-#left p{
+
+#left p {
     padding: 40px 25px;
     font-weight: bold;
     color: white;
 }
+
 #left #admin {
     font-size: 25px;
     padding: 0px 45px;
@@ -109,13 +123,16 @@ body {
     width: 100%;
     padding: 15px 20px;
 }
-#left a:hover{
+
+#left a:hover {
     background-color: aliceblue;
 }
-#left #table{
+
+#left #table {
     background-color: aliceblue;
     color: #24315E;
 }
+
 #left a i {
     padding: 0px 5px;
     text-align: left;
@@ -230,7 +247,8 @@ body {
     background-color: white;
     color: #24315E;
 }
-#hero #navbar #second #mode i{
+
+#hero #navbar #second #mode i {
     padding: 8px 8px;
     color: #24315E;
 }
@@ -250,7 +268,8 @@ body {
     box-shadow: 0px 0px 1px #4444449e;
     outline: none;
 }
-#hero #navbar #third button{
+
+#hero #navbar #third button {
     padding: 9px 20px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -259,7 +278,8 @@ body {
     background-color: #24315E;
     box-shadow: 0px 0px 1px;
 }
-#hero #navbar #third button i{
+
+#hero #navbar #third button i {
     color: white;
 }
 
@@ -275,36 +295,41 @@ body {
     border: 2px solid #24315E;
 }
 
-table th,td{
+table th,
+td {
     border: 1px solid;
     padding: 12px 10px;
     text-align: justify;
     font-weight: bold;
 }
-table #head{
+
+table #head {
     position: sticky;
     top: 0px;
 }
-table th{
+
+table th {
     background-color: gold;
     border: 1px solid gold;
     color: #24315E;
 }
 
-table td{
+table td {
     background-color: #24315E;
     border: 1px solid #24315E;
     font-size: 12px;
     font-weight: bold;
     color: white;
 }
-table td:hover{
+
+table td:hover {
     background-color: white;
     color: #24315E;
     cursor: pointer;
     border: 1px solid white;
 }
-#bottom{
+
+#bottom {
     height: 10vh;
     width: 90%;
     display: flex;
@@ -312,7 +337,8 @@ table td:hover{
     justify-content: center;
     gap: 30px;
 }
-#bottom button{
+
+#bottom button {
     padding: 12px 25px;
     cursor: pointer;
     background-color: #24315E;
@@ -320,7 +346,8 @@ table td:hover{
     font-weight: bold;
     border: 1px solid #24315E;
 }
-#bottom button:hover{
+
+#bottom button:hover {
     background-color: white;
     color: #24315E;
 }
