--- a/CssFile/insert.css
+++ b/CssFile/insert.css
@@ -271,7 +271,7 @@ body {
 }
 
 #hero #navbar #third input {
-    width: 250px;
+    width: 75%;
     padding: 10px 15px;
     border-radius: 20px;
     border: none;
@@ -283,6 +283,7 @@ body {
 }
 
 #hero #navbar #third button {
+    width: 25%;
     padding: 9px 20px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -298,15 +299,16 @@ body {
 
 #hero #main-content {
     margin: 0 auto;
-    height: 85vh;
+    height: 80vh;
     width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    overflow-y: scroll;
-    border: 1px solid black;
-    padding: 10px;
+    padding: 20px 5px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px;
+    background-color: #24315E;
 }
 
 #hero #main-content form {
@@ -314,14 +316,14 @@ body {
     width: 100%;
     display: grid;
     grid-template-columns: auto auto auto auto auto;
-    gap: 10px;
+    gap: 20px;
     align-items: start;
     justify-content: center;
 }
 
 #hero #main-content form input {
     padding: 10px;
-    width: 28vh;
+    width: 100%;
     background-color: aliceblue;
     border: 1px solid #24315E;
     font-weight: bold;
