--- a/CssFile/insert.css
+++ b/CssFile/insert.css
@@ -70,13 +70,8 @@ body {
         border: 1px solid white;
     }
 
-    #hero #navbar #Time {
-        background-color: white;
-        color: #24315E;
-    }
-
     #hero #navbar #Time p {
-        color: black;
+        color: white;
     }
 
     #hero #main-content {
