--- a/CssFile/insert.css
+++ b/CssFile/insert.css
@@ -101,7 +101,7 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    background-color: #24315E;
+    background-color: black;
     /* gap: 25px; */
 }
 
@@ -303,7 +303,7 @@ body {
     padding: 20px 5px;
     border-radius: 10px;
     box-shadow: 0px 0px 5px;
-    background-color: #24315E;
+    background-color: black;
 }
 
 #hero #main-content form {
