--- a/CssFile/table.css
+++ b/CssFile/table.css
@@ -86,7 +86,7 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    background-color: #24315E;
+    background-color: black;
     /* gap: 25px; */
     /* border: 2px solid; */
 }
@@ -290,7 +290,7 @@ body {
     /* border: 2px solid #24315E; */
     border-radius: 10px;
     box-shadow: 0px 0px 5px;
-    background-color: #24315E;
+    background-color: black;
 }
 
 table th,
@@ -307,13 +307,13 @@ table #head {
 }
 
 table th {
-    background-color: yellow;
-    border: 1px solid yellow;
-    color: #24315E;
+    background-color: #24315E;
+    border: 1px solid white;
+    color: white;
 }
 
 table td {
-    background-color: #24315E;
+    background-color: black;
     border: 1px solid white;
     font-size: 12px;
     font-weight: bold;
