--- a/CssFile/team.css
+++ b/CssFile/team.css
@@ -107,7 +107,7 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    background-color: #24315E;
+    background-color: black;
     /* gap: 25px; */
     /* border: 2px solid; */
 }
