--- a/dash.css
+++ b/dash.css
@@ -63,7 +63,7 @@ body {
     }
 
     #hero #navbar #third button {
-        border: 1px solid white;
+        border: 2px solid #24315E;
     }
 
     #hero #navbar #Time p {
@@ -96,7 +96,7 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    background-color: #24315E;
+    background-color: black;
     /* gap: 25px; */
     /* border: 2px solid; */
 }
@@ -290,7 +290,7 @@ body {
 
 #hero #main-content {
     height: 100vh;
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -349,13 +349,13 @@ body {
 }
 
 aside {
-    position: absolute;
-    right: 75px;
+    /* position: absolute; */
+    margin: 0 auto;
     height: 87vh;
     width: 50vh;
     border-radius: 20px;
-    box-shadow: 0px 0px 3px;
-    background-color: #24315E;
+    box-shadow: 0px 0px 5px white;
+    background-color: black;
     display: flex;
     padding: 10px;
     flex-direction: column;
@@ -372,7 +372,7 @@ aside div{
     margin-top: 10px;
     height: 8vh;
     background-color: white;
-    color: #24315E;
+    color: black;
     width: 90%;
     display: flex;
     padding: 0px 10px;
@@ -407,7 +407,7 @@ aside #flow
 {
     height:45vh;
     width: 90%;
-    background-color: #24315E;
+    background-color: black;
     display: flex;
     flex-direction: column;
     align-items: start;
