--- a/CssFile/insert.css
+++ b/CssFile/insert.css
@@ -100,7 +100,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: center;
+    justify-content: start;
     background-color: black;
     /* gap: 25px; */
 }
