--- a/CssFile/team.css
+++ b/CssFile/team.css
@@ -106,7 +106,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: center;
+    justify-content: start;
     background-color: black;
     /* gap: 25px; */
     /* border: 2px solid; */
