--- a/dash.css
+++ b/dash.css
@@ -78,6 +78,9 @@ body {
     aside div{
         background-color: #4444449e;
     }
+    /* aside #flow #chart{
+        background-color: black;
+    } */
 }
 
 #main {
@@ -95,7 +98,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: center;
+    justify-content: start;
     background-color: black;
     /* gap: 25px; */
     /* border: 2px solid; */
@@ -120,7 +123,7 @@ body {
     text-decoration: none;
     font-weight: bold;
     font-size: 14px;
-    padding: 0px 0px 0px 40px;
+    padding: 0px 0px 0px 30px;
     text-align: left;
     color: white;
     /* border: 1px solid; */
@@ -420,7 +423,7 @@ aside #flow #chart{
     display: flex;
     align-items: end;
     justify-content: space-evenly;
-    background-color: #24315E;
+    background-color: black;
     gap: 5px;
 }
 
