--- a/CssFile/insert.css
+++ b/CssFile/insert.css
@@ -150,53 +150,6 @@ body {
     color: #24315E;
 }
 
-#left #premium {
-    height: 45vh;
-    width: 100%;
-    /* border: 1px solid; */
-    display: flex;
-    align-items: end;
-    justify-content: center;
-    border-radius: 15px;
-}
-
-#left #premium #box {
-    height: 25vh;
-    width: 80%;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: end;
-    text-align: center;
-    padding: 10px 0px;
-    gap: 15px;
-    color: #24315E;
-    text-shadow: 3px 3px 5px white;
-    font-weight: bold;
-    background-color: aliceblue;
-    background-image: url('https://media.restless.co.uk/uploads/2022/01/bank-fees-explained.jpeg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: 0px 0px 5px #24315E;
-}
-
-#left #premium #box #btn {
-    padding: 10px 20px;
-    border-radius: 20px;
-    border: 1px solid #24315E;
-    font-weight: bold;
-    color: white;
-    background-color: #24315E;
-    cursor: pointer;
-}
-
-#left #premium #box #btn:hover {
-    background-color: white;
-    color: #24315E;
-}
-
 #hero {
     height: 100vh;
     width: 85%;
@@ -293,38 +246,40 @@ body {
 }
 
 #hero #main-content {
-    margin: 0 auto;
     height: 80vh;
     width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
-    padding: 20px 5px;
+    justify-content: center;
     border-radius: 10px;
     box-shadow: 0px 0px 5px;
     background-color: black;
 }
-
+#hero #main-content h3{
+    color: white;
+}
 #hero #main-content form {
-    height: 85vh;
-    width: 100%;
+    height: 50vh;
+    width: 35%;
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
-    gap: 20px;
-    align-items: start;
+    grid-template-columns: auto;
+    align-items: center;
     justify-content: center;
+    /* border: 1px solid gray; */
+    padding: 25px 0px;
+    border-radius: 15px;
 }
 
-#hero #main-content form input {
-    padding: 10px;
-    width: 100%;
-    background-color: aliceblue;
-    border: 1px solid #24315E;
+#hero #main-content form input{
+    padding: 10px 15px;
     font-weight: bold;
-    outline: none;
+    width: 300px;
+    background-color: transparent;
+    border: 1px solid gray;
+    color: white;
+    border-radius: 5px;
 }
-
 #bottom {
     height: 10vh;
     width: 90%;
