--- a/CssFile/table.css
+++ b/CssFile/table.css
@@ -282,7 +282,7 @@ table td {
     border: 1px solid white;
     font-size: 12px;
     font-weight: bold;
-    color: white;
+    color: #d6c7c7;
 }
 
 table td:hover {
